compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__duplicate_function_names_3.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1054
expression: "fn dupe() { 1 }\nfn dupe(x) { x }"
snapshot_kind: text
---
----- SOURCE CODE
fn dupe() { 1 }
fn dupe(x) { x }

----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.gleam:2:1
  │
1 │ fn dupe() { 1 }
  │ --------- First defined here
2 │ fn dupe(x) { x }
  │ ^^^^^^^^^^ Redefined here

`dupe` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
