compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__duplicate_function_names_4.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1062
expression: "fn dupe() { 1 }\n@external(erlang, \"a\", \"b\")\nfn dupe(x) -> x\n"
snapshot_kind: text
---
----- SOURCE CODE
fn dupe() { 1 }
@external(erlang, "a", "b")
fn dupe(x) -> x


----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.gleam:3:1
  │
1 │ fn dupe() { 1 }
  │ --------- First defined here
2 │ @external(erlang, "a", "b")
3 │ fn dupe(x) -> x
  │ ^^^^^^^^^^ Redefined here

`dupe` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
