compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__duplicate_function_names_5.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1072
expression: "\n@external(erlang, \"a\", \"b\")\nfn dupe(x) -> x\nfn dupe() { 1 }\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "a", "b")
fn dupe(x) -> x
fn dupe() { 1 }


----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.gleam:4:1
  │
3 │ fn dupe(x) -> x
  │ ---------- First defined here
4 │ fn dupe() { 1 }
  │ ^^^^^^^^^ Redefined here

`dupe` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
