compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__duplicate_vars.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 571
expression: "case #(1, 2) { #(x, x) -> 1 }"
snapshot_kind: text
---
----- SOURCE CODE
case #(1, 2) { #(x, x) -> 1 }

----- ERROR
error: Duplicate variable in pattern
  ┌─ /src/one/two.gleam:1:21
  │
1 │ case #(1, 2) { #(x, x) -> 1 }
  │                     ^ This has already been used

Variables can only be used once per pattern. This variable `x` appears
multiple times.
If you used the same variable twice deliberately in order to check for
equality please use a guard clause instead.
e.g. (x, y) if x == y -> ...
