compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__expression_constructor_update.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1675
expression: "\npub type Person {\n  Person(name: String, age: Int)\n}\npub fn update_person(person: Person) {\n  let constructor = Person\n  constructor(..person)\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub type Person {
  Person(name: String, age: Int)
}
pub fn update_person(person: Person) {
  let constructor = Person
  constructor(..person)
}

----- ERROR
error: Invalid record constructor
  ┌─ /src/one/two.gleam:7:3
  │
7 │   constructor(..person)
  │   ^^^^^^^^^^^ This is not a record constructor

Only record constructors can be used with the update syntax.
